--- a/register.css
+++ b/register.css
@@ -12,28 +12,21 @@ html,body{
   place-items: center;
   /* background: -webkit-linear-gradient(left, #a445b2, #fa4299); */
 }
-/* navbar code */
-.navbar{
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
-.fotter-code{
-  position: absolute;
-    bottom: 0;
-    width: 100%;
-}
+
 ::selection{
   background: #11BCE5;
   color: #fff;
 }
 .wrapper{
+  border: 1px solid black;
+  top: 30px;
+  position: absolute;
   overflow: hidden;
   max-width: 390px;
   background: #fff;
   padding: 30px;
   border-radius: 5px;
-  box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
+  box-shadow: 0px 15px 20px rgba(0,0,0,0.3);
 }
 .wrapper .title-text{
   display: flex;
